# Computational-Geometry-pedagogical-animations

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  main.cpp  tests.cpp
.config/: config  dark_mode.cfg
Drawer/Model/: Global_variables.h  Plot.h  Point.h  Polygon.h  Segment.h
Graphism/: Bounding_box.h  Figure.h
Graphism/Model/: Plot.h  Point.h  Polygon.h  Segment.h
animations/Chapter-1/: Convex_hull_setup.h  rotating_convex_hull.cpp  slow_convex_hull.cpp
animations/Chapter-2/: Segment-intersections.cpp
animations/Other-stuff/: phi.cpp  prime_spiral.cpp  syracuse.cpp
animations/chapter-1/: convex-hull.cpp  daq-convex-hull.cpp  jarvis-convex-hull.cpp  jarvis_convex_hull.cpp  rotating-convex-hull.cpp  slow-convex-hull.cpp
animations/chapter-2/: segment-intersections.cpp
animations/chapter-3/: polygon-triangulation.cpp
animations/other-stuff/: IFS.cpp  d.cpp  dragon.cpp  english-workshop.cpp  mu.cpp  phi.cpp  pi.cpp  prime-spiral.cpp  syracuse.cpp
data/.config/: light_mode
data/IFS/: IFS  barnsley  dragon  sierpinsky  von-koch
data/unit_test_input/: add_diagonal_old_test  add_diagonal_test1  add_diagonal_test2  add_diagonal_test3  add_diagonal_test4
examples/: AVL-example.cpp  acquisition-example.cpp  acquisition_example.cpp
include/: Convex_hull_setup.h  Segment_intersections_events.h  Segment_intersections_setup.h  convex_hull_setup.h  segment_intersections_events.h  segment_intersections_setup.h  segment_intersections_utils.h
include/Algorithms/: Algorithms.h
include/General_tools/: File_management.h
include/Segment_intersections/: Segment_intersections_setup.h
include/segment_intersections/: tree.h  utils.h
libs/geometry/: CMakeLists.txt
libs/geometry/include/geometry/DCEL/: DCEL.h  DCEL_components.h
libs/geometry/include/geometry/Model/: Point_2.h  Segment_2.h  Serialization.h
libs/geometry/include/geometry/Tools/: AVL.h  Event_queue.h  Line_intersections.h  Point_comparisons.h  Random_generation.h
libs/geometry/include/geometry/algorithms/: convex_hull.h  segment_intersections.h
libs/geometry/include/geometry/algorithms/segment_intersections/: events.h  tree.h  utils.h
libs/geometry/include/geometry/algorithms/segment_intersections_components/: face_computation.h  intersections_test.h  sic_events.h  sic_tree.h  sic_utils.h
libs/geometry/include/geometry/model/: DCEL.h  Point_2.h  Segment_2.h  number.h  point.h  point_2.h  real.h  segment.h  segment_2.h  serialization.h
libs/geometry/include/geometry/utils/: AVL.h  Event_queue.h  algebra.h  event_queue.h  line_intersections.h  point_comparisons.h  polygon_utils.h  random_generation.h
libs/geometry/src/geometry/DCEL/: DCEL.cpp  DCEL_components.cpp  Segment_intersection.cpp
libs/geometry/src/geometry/algorithms/: convex_hull.cpp  segment_intersections.cpp
libs/geometry/src/geometry/algorithms/segment_intersections/: events.cpp  tree.cpp  utils.cpp
libs/geometry/src/geometry/algorithms/segment_intersections_components/: face_computation.cpp  intersections_test.cpp  sic_events.cpp  sic_tree.cpp  sic_utils.cpp
libs/geometry/src/geometry/model/: DCEL.cpp  number.cpp  point.cpp  point_2.cpp  real.cpp  segment.cpp  segment_2.cpp  serialization.cpp
libs/geometry/src/geometry/utils/: line_intersections.cpp  point_comparisons.cpp  polygon_utils.cpp  random_generation.cpp
libs/graphics/: CMakeLists.txt
libs/graphics/include/graphics/Model/: Animation.h  Bounding_box.h  Figure.h  Geometric_object.h  Global_variables.h
libs/graphics/include/graphics/Model/Acquisitions/: Acquisition.h  Point_acq.h  Segment_acq.h
libs/graphics/include/graphics/Model/Shapes/: Circle_shp.h  Line_shp.h  Polygon_shp.h  Segment_shp.h  Shape.h  Text_shp.h
libs/graphics/include/graphics/View/: Acquisition_canvas.h  Canvas.h  Display_canvas.h
libs/graphics/include/graphics/model/: Animation.h  Figure.h  Geometric_object.h  global_variables.h
libs/graphics/include/graphics/model/acquisitions/: Acquisition.h  Polygon_acq.h  Segment_acq.h
libs/graphics/include/graphics/model/shapes/: Circle_shp.h  Double_edge_shp.h  Half_edge_shp.h  Point_shp.h  Shape.h  Text_shp.h  Vector_shp.h
libs/graphics/include/graphics/view/: Acquisition_canvas.h  Animation_canvas.h  Canvas.h  Display_canvas.h
libs/graphics/src/graphics/Model/: Animation.cpp  Bounding_box.cpp  Figure.cpp  Geometric_object.cpp  Global_variables.cpp
libs/graphics/src/graphics/Model/Acquisitions/: Acquisition.cpp  Point_acq.cpp  Segment_acq.cpp
libs/graphics/src/graphics/Model/Shapes/: Circle_shp.cpp  Line_shp.cpp  Point_shp.cpp  Polygon_shp.cpp  Segment_shp.cpp  Shape.cpp  Text_shp.cpp  Vector_shp.cpp
libs/graphics/src/graphics/View/: Acquisition_canvas.cpp  Acquisition_events.cpp  Display_canvas.cpp  Display_events.cpp
libs/graphics/src/graphics/View/Canvas/: Canvas.cpp  Canvas_events.cpp  Draw_plots.cpp
libs/graphics/src/graphics/model/: Animation.cpp  Bounding_box.cpp  Figure.cpp  Geometric_object.cpp  global_variables.cpp
libs/graphics/src/graphics/model/acquisitions/: Acquisition.cpp  Point_acq.cpp  Polygon_acq.cpp  Segment_acq.cpp
libs/graphics/src/graphics/model/shapes/: Circle_shp.cpp  Double_edge_shp.cpp  Half_edge_shp.cpp  Line_shp.cpp  Point_shp.cpp  Polygon_shp.cpp  Segment_shp.cpp  Shape.cpp  Text_shp.cpp  Vector_shp.cpp
libs/graphics/src/graphics/view/: Acquisition_canvas.cpp  Animation_canvas.cpp  Display_canvas.cpp  acquisition_events.cpp  animation_events.cpp  display_events.cpp
libs/graphics/src/graphics/view/canvas/: Canvas.cpp  canvas_events.cpp  draw_plots.cpp  draw_shapes.cpp
libs/utils/: CMakeLists.txt
libs/utils/include/utils/: File_management.h  Program_options.h
libs/utils/src/utils/: File_management.cpp  Program_options.cpp  file_management.cpp
src/: convex_hull_utils.cpp  segment_intersections_events.cpp  segment_intersections_utils.cpp
tests/: DCEL-basic-test.cpp  add-diagonal-test.cpp  convex-hull-test.cpp  display-tests.cpp  display_tests.cpp  event-queue-tests.cpp  event_queue_tests.cpp  little-tests.cpp  mark-tests.cpp  segment-intersections-tests.cpp  tests.cpp
(+162 files in other folders)
